Bug 96327 - Search result window shows overlapping contents.
After getting feedback from Josh, Vince, and Conrad, I decided to address this by limiting the height of the input to one line of bubbles with vertical scroll. This is not ideal, but the use case is rare and would require a lot more effort to adjust the layout behavior.

Set max-height to 2rem (and 2em for ie8)

https://bugzilla.zimbra.com/show_bug.cgi?id=96327

Copied from Perforce
 Change: 529103

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -1337,6 +1337,11 @@ INPUT[type="text"].search_input-expanded {
 	overflow:auto;
 }
 
+.ZmSearchResultsToolBar .addrBubbleHolder {
+	max-height: 2em;
+	max-height: 2rem;
+}
+
 .attBubbleHolder {
 	display:inline;
 	border-radius:4px;
